# solbot

./: Cargo.toml  README.md  config.toml  docs.md  note.md
src/: main.rs
src/arbitrage/: detector.rs  executor.rs  mod.rs
src/dex/: jupiter.rs  mod.rs  orca.rs  raydium.rs
src/monitor/: mod.rs  price_feed.rs
src/utils/: config.rs  mod.rs  wallet.rs
wallet/: keypair.json
